syntax = "proto3";

option go_package = "pkg/orderProto";

message Info{
    repeated Driver drivers = 1;
}

message Driver {
    string ID = 1;
	string Name = 2;
	string PhoneNumber = 3;
	float Raiting = 4;
}

service OrderService{
    rpc SyncDriver(Info) returns (Info) {}
}